[package]
name = "libsvm"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
libsvm-sys = "^3.24.0"
failure = "^0.1.0"
nalgebra = { version = "0.21.0", optional = true }
ndarray = { version = "0.13.0", optional = true }
sprs = { version = "0.7.0", optional = true }
num = "^0.2.0"
num-derive = "^0.3.0"
num-traits = "^0.2.0"

[features]
with-nalgebra = ["nalgebra"]
with-ndarray = ["ndarray"]
with-sprs = ["sprs"]
