[package]
name = "libsvm-convert"
version = "0.1.0"
edition = "2021"

[dependencies]
libsvm = { version = "0.4.0", path = "../libsvm-rust" }
libsvm-sys = { version = "4.0.0", path = "../libsvm-sys2", package = "libsvm-sys2" }
nalgebra = { version = "0.30.1", optional = true }
ndarray = { version = "0.15.4", optional = true }
